# coursework_6

./: pyproject.toml
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html
users/: models.py  views.py
users/management/commands/: add_csu_groups.py
users/migrations/: 0001_initial.py
