[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
amqp = "^5.1.1"
apscheduler = "^3.10.4"
asgiref = "^3.7.2"
billiard = "^4.1.0"
celery = "^5.3.4"
click = "^8.1.7"
click-didyoumean = "^0.3.0"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
colorama = "^0.4.6"
flake8 = "^6.1.0"
kombu = "^5.3.2"
mccabe = "^0.7.0"
pillow = "^10.1.0"
prompt-toolkit = "^3.0.39"
psycopg2 = "^2.9.9"
pycodestyle = "^2.11.1"
pyflakes = "^3.1.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytils = "^0.4.1"
pytz = "^2023.3.post1"
redis = "^5.0.1"
schedule = "^1.2.1"
six = "^1.16.0"
sqlparse = "^0.4.4"
tzdata = "^2023.3"
tzlocal = "^5.1"
vine = "^5.0.0"
wcwidth = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
